--- a/blog-view/public/index.html
+++ b/blog-view/public/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css">
 
     <!-- live2d相关引用   -->
-    <link rel="stylesheet" type="text/css" href="./live2d/assets/waifu.css"/>
+<!--    <link rel="stylesheet" type="text/css" href="./live2d/assets/waifu.css"/>-->
+    <link rel="stylesheet" type="text/css" href="https://api.live2d.atri.wiki/assets/waifu.css"/>
+
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
@@ -42,10 +44,13 @@
 
 </div>
 <!-- Live2DCubismCore script -->
-<script src="./live2d/assets/live2dcubismcore.js"></script>
+<!--<script src="./live2d/assets/live2dcubismcore.js"></script>-->
+<script src="https://api.live2d.atri.wiki/assets/live2dcubismcore.js"></script>
 <!-- Build script -->
-<script src = "./live2d/assets/ATRI_live2d.js"></script>
-  <script src="live2d/assets/waifu-tips.js"></script>
+<!--<script src = "./live2d/assets/ATRI_live2d.js"></script>-->
+<script src = "https://api.live2d.atri.wiki/assets/ATRI_live2d.js"></script>
+<!--  <script src="live2d/assets/waifu-tips.js"></script>-->
+  <script src="https://api.live2d.atri.wiki/assets/waifu-tips.js"></script>
 <!--<script src="./assets/waifu-tips.js"></script>-->
 <script type="text/javascript">
     //必选参数
@@ -54,7 +59,8 @@
     let modulesPath = "https://api.live2d.atri.wiki/models/"
     let modelNames = ['ATRI','Hiyori']  //注意，这里的名字是存放你模型文件的主目录的名字，目录中的moc3.json文件的名字一定要与目录同名
     //可选参数
-    let waifuTipsUrl = "./live2d/assets/waifu-tips.json"
+    // let waifuTipsUrl = "./live2d/assets/waifu-tips.json"
+    let waifuTipsUrl = "https://api.live2d.atri.wiki/assets/waifu-tips.json"
 
     initModel(modulesPath,modelNames,waifuTipsUrl);
 </script>
